add endpoints for anonymous messages
