# models/messages/messages.go
@@ -6,11 +6,13 @@ import (
 	"github.com/google/uuid"
 )
 
-type Messages struct {
+type Message struct {
 	ID        uuid.UUID  `json:"id" gorm:"type:uuid"`
 	CreatedAt time.Time  `json:"created_at"`
 	UpdatedAt time.Time  `json:"-"`
 	DeletedAt *time.Time `json:"-"`
 	Message   string     `json:"message" gorm:"required"`
-	UserID    uuid.UUID  `json:"user_id" gorm:"required"`
 }
+
+
+type Messages []Message
